--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -7,7 +7,7 @@
     android:padding="8dp"
     android:background="@color/dark_blue"
     android:orientation="vertical"
-    tools:context="br.usjt.sin.progmulti.atividadessi2018.MainActivity">
+    tools:context="br.usjt.sin.progmulti.atividadessi2018.DialogActivity">
 
     <TextView
         android:layout_width="match_parent"
